Limited input of numbers to prevent overflow of the display

--- a/style.css
+++ b/style.css
@@ -18,12 +18,19 @@ background-image: url("https://forum.chickeninvaders.com/uploads/db1091/01ac9cfb
     color:rgb(251, 251, 251);
     height: 250px;
     display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
+    width: 300px;
+
 }
 .result{
     padding: 20px;
     font-size: 60px;
+    width: 300px;
+    height: 200px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    word-break: break-all;
+
 
 
 }
